# charmed-postgresql-rock

./: .dummy  README.md  pyproject.toml  rockcraft.yaml  tox.ini
.github/: .jira_sync_config.yaml  renovate.json5
.github/workflows/: build.yaml  ci.yaml  integration.yaml  lint.yaml  publish.yaml  release.yaml  sbom.yaml  sync_issue_to_jira.yaml
licenses/: LICENSE-pgbackrest  LICENSE-postgresql
